card-link: Start building Card Link page.

--- a/src/Views/Server/Components/CardLink.razor
+++ b/src/Views/Server/Components/CardLink.razor
@@ -1,4 +1,4 @@
-@namespace Views.Server.Featured
+@namespace Views.Server.Components
 
 <a href="@Href" target="@Target" class="block">
     <div class="card">
