--- a/src/Site/Components/App.razor
+++ b/src/Site/Components/App.razor
@@ -5,18 +5,18 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="@Assets["app.css"]" />
-        <link rel="stylesheet" href="@Assets["Site.styles.css"]" />
+        <link rel="stylesheet" href="/@Assets["app.css"]" />
+        <link rel="stylesheet" href="/@Assets["Site.styles.css"]" />
         <!--
         <link rel="stylesheet" href="/app.css" />
         <link rel="stylesheet" href="/Site.styles.css" />
         -->
         <ImportMap />
-        <link rel="icon" type="image/png" href="favicon.png" />
+        <link rel="icon" type="image/png" href="/favicon.png" />
         <HeadOutlet />
     </head>
     <body class="bg-light-2 text-shadow-5 dark:bg-shadow-1 dark:text-light-3">
         <Routes />
-        <script src="_framework/blazor.web.js"></script>
+        <script src="/_framework/blazor.web.js"></script>
     </body>
 </html>
