--- a/src/Site/Components/Pages/StyleGuide/Index.razor
+++ b/src/Site/Components/Pages/StyleGuide/Index.razor
@@ -29,7 +29,7 @@
             live examples.
         </p>
     </Overview>
-    <Content>
+    <ChildContent>
         <div class="grid grid-cols-1 gap-4 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 lg:gap-8">
             <div class="card object">
                 <a href="#approach">Approach</a>
@@ -44,7 +44,7 @@
                 <a href="#css-components">CSS Components</a>
             </div>
         </div>
-    </Content>
+    </ChildContent>
 </SectionBlock>
 
 <ContentArea>
@@ -52,7 +52,7 @@
 </ContentArea>
 
 <SectionBlock Id="approach" Heading="Approach" WithOverview="false">
-    <Content>
+    <ChildContent>
         <div class="grid gap-4 grid-cols-1 md:grid-cols-3">
             <div class="card object copy col-span-1 md:col-span-2">
                 <h3 class="heading heading-3">
@@ -84,7 +84,7 @@
                 </p>
             </div>
         </div>
-    </Content>
+    </ChildContent>
 </SectionBlock>
 
 <ContentArea>
@@ -97,14 +97,14 @@
             Non-trivial arrangements of components with additional functionality.
         </p>
     </Overview>
-    <Content>
+    <ChildContent>
         <div class="grid gap-4 grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 lg:gap-8">
             <div class="card object">Flash</div>
             <div class="card object">Page Header</div>
             <div class="card object">Page Footer</div>
             <div class="card object">Section Block</div>
         </div>
-    </Content>
+    </ChildContent>
 </SectionBlock>
 
 <ContentArea>
@@ -118,12 +118,12 @@
             good choice for when SEO counts.
         </p>
     </Overview>
-    <Content>
+    <ChildContent>
         <div class="grid gap-4 grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 lg:gap-8">
             <div class="card object">Content Area</div>
             <div class="card object">Card Link</div>
         </div>
-    </Content>
+    </ChildContent>
 </SectionBlock>
 
 <ContentArea>
@@ -137,7 +137,7 @@
             styles in a deeply composable way.
         </p>
     </Overview>
-    <Content>
+    <ChildContent>
         <div class="grid gap-4 grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 lg:gap-8">
             <div class="card object">Card</div>
             <div class="card object">Copy</div>
@@ -146,7 +146,7 @@
             <div class="card object">Object</div>
             <div class="card object">Sub-Heading</div>
         </div>
-    </Content>
+    </ChildContent>
 </SectionBlock>
 
 <SectionContent SectionName="Footer">
