style-guide: Start fleshing out dedicated style guide pages.

--- a/src/Site/Components/Pages/StyleGuide/CardLink.razor
+++ b/src/Site/Components/Pages/StyleGuide/CardLink.razor
@@ -21,20 +21,7 @@
     Navigation Content
 </SectionContent>
 
-<SectionBlock Id="overview" Heading="Card Link" HeadingLevel="1" WithContent="false">
-    <Overview>
-        <p class="sub-heading">
-            Card Links appear as CSS Card components, but the entire card is a
-            clickable link.
-        </p>
-    </Overview>
-</SectionBlock>
-
-<ContentArea>
-    <hr class="my-0" />
-</ContentArea>
-
-<SectionBlock Id="example-1" Heading="Example 1">
+<SectionBlock Id="overview" Heading="Card Link" HeadingLevel="1">
     <Overview>
         <p class="sub-heading">
             Card Links appear as CSS Card components, but the entire card is a
@@ -42,9 +29,31 @@
         </p>
     </Overview>
     <ChildContent>
-        <div class="grid gap-4 grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 lg:gap-8">
-            <div class="card object">
-                Card Link Demo
+        <div class="card object mb-8">
+            <div class="mb-8">
+                <h2 class="heading heading-3">Usage Guidelines</h2>
+                <div class="copy">
+                    <ul class="emoji">
+                        <li class="check">Card Links look like Cards, but interactive.</li>
+                        <li class="check">The entire Card is tabbable and clickable.</li>
+                        <li class="check">
+                            Card Links may link to other pages, other sites, or
+                            anchors on the same page.
+                        </li>
+                        <li class="x">
+                            Card links are for navigation, not UI actions.  Use
+                            a button when appropriate.
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div>
+                <h2 class="heading heading-3">Examples</h2>
+                <div class="grid gap-4 grid-cols-1 md:grid-cols-2 lg:grid-cols-3 lg:gap-8">
+                    <div class="card">.card</div>
+                    <div class="card object">.card .object</div>
+                    <div class="card card--skeletal">.card .card--skeletal</div>
+                </div>
             </div>
         </div>
     </ChildContent>
