style-guide: Further organize documentation pages.

--- a/src/Site/Components/Pages/StyleGuide/ServerComponents/CardLink.razor
+++ b/src/Site/Components/Pages/StyleGuide/ServerComponents/CardLink.razor
@@ -1,4 +1,4 @@
-@page "/style-guide/card-link"
+@page "/style-guide/server-components/card-link"
 @using Microsoft.AspNetCore.Components.Sections
 @using Views.Server.Components
 @using Views.Server.Features
