--- a/src/Views/Server/Components/CardLink.razor
+++ b/src/Views/Server/Components/CardLink.razor
@@ -1,7 +1,7 @@
 @namespace Views.Server.Components
 
 <a href="@Href" target="@Target" class="block">
-    <div class="card">
+    <div class="card border-interactive-1">
         @ChildContent
     </div>
 </a>
