--- a/src/Views/Client/styles/index.css
+++ b/src/Views/Client/styles/index.css
@@ -8,9 +8,9 @@
 }
 
 @theme {
-  --color-shadow-1: var(--color-neutral-950);
+  --color-shadow-1: oklch(17% 0 0); /* default oklch(14.5%) */
   --color-shadow-2: var(--color-neutral-900);
-  --color-shadow-3: var(--color-neutral-800);
+  --color-shadow-3: oklch(32% 0 0); /* default oklch(26.9% 0 0) */
   --color-shadow-4: var(--color-neutral-700);
   --color-shadow-5: var(--color-neutral-600);
 
