card-link: Begin fleshing out card link component.

--- a/src/Site/Components/Pages/StyleGuide/ServerComponents/CardLink.razor
+++ b/src/Site/Components/Pages/StyleGuide/ServerComponents/CardLink.razor
@@ -50,9 +50,9 @@
             <div>
                 <h2 class="heading heading-3">Examples</h2>
                 <div class="grid gap-4 grid-cols-1 md:grid-cols-2 lg:grid-cols-3 lg:gap-8">
-                    <div class="card">.card</div>
-                    <div class="card object">.card .object</div>
-                    <div class="card card--skeletal">.card .card--skeletal</div>
+                    <Views.Server.Components.CardLink Href="#">
+                        Test
+                    </Views.Server.Components.CardLink>
                 </div>
             </div>
         </div>
