--- a/src/Views/Server/Components/CardLink/CardLink.razor
+++ b/src/Views/Server/Components/CardLink/CardLink.razor
@@ -1,7 +1,7 @@
 @namespace Views.Server.Components
 
-<a href="@Href" target="@Target" class="block">
-    <div class="card border-interactive-1">
+<a href="@Href" target="@Target" class="card-link">
+    <div class="card object">
         @ChildContent
     </div>
 </a>
