--- a/src/Site/Components/Pages/StyleGuide/ServerComponents/CardLink.razor
+++ b/src/Site/Components/Pages/StyleGuide/ServerComponents/CardLink.razor
@@ -34,8 +34,15 @@
                 <h2 class="heading heading-3">Usage Guidelines</h2>
                 <div class="copy">
                     <ul class="emoji">
-                        <li class="check">Card Links look like Cards, but interactive.</li>
-                        <li class="check">The entire Card is tabbable and clickable.</li>
+                        <li class="check">
+                            Card Links combine styles from Cards and Links.
+                        </li>
+                        <li class="check">
+                            The entire Card is tabbable and clickable.
+                        </li>
+                        <li class="check">
+                            Use of imagery and iconography is heavily encouraged.
+                        </li>
                         <li class="check">
                             Card Links may link to other pages, other sites, or
                             anchors on the same page.
@@ -44,6 +51,10 @@
                             Card links are for navigation, not UI actions.  Use
                             a button when appropriate.
                         </li>
+                        <li class="x">
+                            When nested within another card, Card Links should not
+                            use the "object" modifier class.
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -51,7 +62,13 @@
                 <h2 class="heading heading-3">Examples</h2>
                 <div class="grid gap-4 grid-cols-1 md:grid-cols-2 lg:grid-cols-3 lg:gap-8">
                     <Views.Server.Components.CardLink Href="#">
-                        Test
+                        Normal
+                    </Views.Server.Components.CardLink>
+                    <Views.Server.Components.CardLink Href="#" Modifiers="object">
+                        Modifiers="object"
+                    </Views.Server.Components.CardLink>
+                    <Views.Server.Components.CardLink Href="#" Modifiers="card--skeletal">
+                        Modifiers="card--skeletal"
                     </Views.Server.Components.CardLink>
                 </div>
             </div>
