--- a/src/Views/Server/Components/CardLink/CardLink.razor
+++ b/src/Views/Server/Components/CardLink/CardLink.razor
@@ -1,7 +1,7 @@
 @namespace Views.Server.Components
 
 <a href="@Href" target="@Target" class="card-link">
-    <div class="card object">
+    <div class="card @(Modifiers)">
         @ChildContent
     </div>
 </a>
@@ -18,6 +18,12 @@
 
     [Parameter]
     public string Target { get; set; } = "_self";
+
+    /// <summary>
+    /// Modifier CSS classes.  These will be appended to the Card element.
+    /// </summary>
+    [Parameter]
+    public string Modifiers { get; set; } = "";
 
     [Parameter]
     public RenderFragment ChildContent { get; set; }
