style-guide: Update docs.

--- a/src/Site/Components/Pages/StyleGuide/CSSComponents/_Overview.razor
+++ b/src/Site/Components/Pages/StyleGuide/CSSComponents/_Overview.razor
@@ -1,3 +1,4 @@
+@using Views.Server.Components
 @using Views.Server.Features
 
 @namespace Site.Components.Pages.StyleGuide.CSSComponents
@@ -11,6 +12,9 @@
     <ChildContent>
         <div class="grid gap-4 grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 lg:gap-8">
             <div class="card object">Card</div>
+            <CardLink Href="/style-guide/css-components/card" Class="object">
+                Card
+            </CardLink>
             <div class="card object">Copy</div>
             <div class="card object">Headings</div>
             <div class="card object">Horizontal Rule</div>
