--- a/src/Site/Components/Pages/StyleGuide/Index.razor
+++ b/src/Site/Components/Pages/StyleGuide/Index.razor
@@ -32,18 +32,18 @@
     </Overview>
     <ChildContent>
         <div class="grid grid-cols-1 gap-4 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 lg:gap-8">
-            <div class="card object">
-                <a href="#design-guidelines">Design Guidelines</a>
-            </div>
-            <div class="card object">
-                <a href="#features">Features</a>
-            </div>
-            <div class="card object">
-                <a href="#server-components">Server Components</a>
-            </div>
-            <div class="card object">
-                <a href="#css-components">CSS Components</a>
-            </div>
+            <CardLink Href="#design-guidelines" Class="object">
+                Design Guidelines
+            </CardLink>
+            <CardLink Href="#features" Class="object">
+                Features
+            </CardLink>
+            <CardLink Href="#server-components" Class="object">
+                Server Components
+            </CardLink>
+            <CardLink Href="#css-components" Class="object">
+                CSS Components
+            </CardLink>
         </div>
     </ChildContent>
 </SectionBlock>
