--- a/src/Site/Components/Pages/StyleGuide/ServerComponents/CardLink.razor
+++ b/src/Site/Components/Pages/StyleGuide/ServerComponents/CardLink.razor
@@ -64,11 +64,11 @@
                     <Views.Server.Components.CardLink Href="#">
                         Normal
                     </Views.Server.Components.CardLink>
-                    <Views.Server.Components.CardLink Href="#" Modifiers="object">
-                        Modifiers="object"
+                    <Views.Server.Components.CardLink Href="#" Class="object">
+                        Class="object"
                     </Views.Server.Components.CardLink>
-                    <Views.Server.Components.CardLink Href="#" Modifiers="card--skeletal">
-                        Modifiers="card--skeletal"
+                    <Views.Server.Components.CardLink Href="#" Class="card--skeletal">
+                        Class="card--skeletal"
                     </Views.Server.Components.CardLink>
                 </div>
             </div>
