--- a/src/Site/Components/Pages/StyleGuide/ServerComponents/Index.razor
+++ b/src/Site/Components/Pages/StyleGuide/ServerComponents/Index.razor
@@ -21,7 +21,7 @@
     Navigation Content
 </SectionContent>
 
-<Site.Components.Pages.StyleGuide.ServerComponents._Overview
+<Site.Components.Pages.StyleGuide.ServerComponents.Overview
     Id="overview"
     HeadingLevel="1"
 />
