--- a/src/Site/Components/Pages/StyleGuide/Features/Index.razor
+++ b/src/Site/Components/Pages/StyleGuide/Features/Index.razor
@@ -22,4 +22,4 @@
     Navigation Content
 </SectionContent>
 
-<_Overview Id="overview" HeadingLevel="1" />
+<Overview Id="overview" HeadingLevel="1" />
