--- a/src/Site/Components/Pages/StyleGuide/DocLink.razor
+++ b/src/Site/Components/Pages/StyleGuide/DocLink.razor
@@ -14,5 +14,5 @@
     public required string Href { get; set; }
     
     [Parameter]
-    public RenderFragment ChildContent { get; set; }
+    public required RenderFragment ChildContent { get; set; }
 }
