--- a/src/Views/Server/Layouts/BasicLayout.razor
+++ b/src/Views/Server/Layouts/BasicLayout.razor
@@ -3,6 +3,7 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Views.Server.Components
 @using Views.Server.Features
+@using Views.Server.Features.PageHeader
 
 @namespace Views.Server.Layouts
 
@@ -12,14 +13,14 @@
 </HeadContent>
 
 <div class="flex flex-col min-h-screen">
-    <PageHeader>
+    <Header>
         <Heading>
             <SectionOutlet SectionName="Heading" />
         </Heading>
         <Navigation>
             <SectionOutlet SectionName="Navigation" />
         </Navigation>
-    </PageHeader>
+    </Header>
 
     <SectionOutlet SectionName="Flashes" />
 
