--- a/src/Site/Components/Pages/StyleGuide/Index.razor
+++ b/src/Site/Components/Pages/StyleGuide/Index.razor
@@ -19,7 +19,7 @@
     <div>This is header slot content.</div>
 </SectionContent>
 
-<SectionContent SectionName="Navigation">
+<SectionContent SectionName="NavigationLinks">
     <MainNavigation ActiveLink="StyleGuide" />
 </SectionContent>
 
