--- a/src/Site/Components/Shared/MainNavigation.razor
+++ b/src/Site/Components/Shared/MainNavigation.razor
@@ -5,6 +5,9 @@
 <NavigationLink Href="/" IsActive="@(ActiveLink == "Home")">
     Home
 </NavigationLink>
+<NavigationLink Href="/about" IsActive="@(ActiveLink == "About")">
+    About
+</NavigationLink>
 <NavigationLink Href="/style-guide" IsActive="@(ActiveLink == "StyleGuide")">
     Style Guide
 </NavigationLink>
