--- a/src/Views/Client/styles/index.css
+++ b/src/Views/Client/styles/index.css
@@ -57,8 +57,9 @@
 @layer components {
   @import "./components/object.css";
   @import "./components/card.css";
-  @import "./components//headings.css";
+  @import "./components/headings.css";
   @import "./components/hr.css";
-  @import "./components//sub-heading.css";
+  @import "./components/sub-heading.css";
+  @import "./components/link.css";
   @import "./components/copy.css";
 }
