--- a/src/Views/Server/Layouts/BasicLayout.razor
+++ b/src/Views/Server/Layouts/BasicLayout.razor
@@ -17,9 +17,9 @@
         <Heading>
             <SectionOutlet SectionName="Heading" />
         </Heading>
-        <Navigation>
-            <SectionOutlet SectionName="Navigation" />
-        </Navigation>
+        <NavigationLinks>
+            <SectionOutlet SectionName="NavigationLinks" />
+        </NavigationLinks>
     </Header>
 
     <SectionOutlet SectionName="Flashes" />
