--- a/src/Views/Server/Features/PageHeader/NavigationLink.razor
+++ b/src/Views/Server/Features/PageHeader/NavigationLink.razor
@@ -2,20 +2,14 @@
 
 @namespace Views.Server.Features.PageHeader
 
-<div class="inline-flex items-center">
-    @if (IsActive)
-    {
-        <CardLink Href="@Href" Class="px-4 py-2">
-            @ChildContent
-        </CardLink>
-    }
-    else
-    {
-        <a href="@Href" class="inline-block">
-            @ChildContent
-        </a>
-    }
-</div>
+<li>
+    <a
+        class="navigation-link @(IsActive ? "navigation-link--active" : "")"
+        href="@Href"
+    >
+        @ChildContent
+    </a>
+</li>
 
 @code {
     [Parameter]
