views: Refine mobile nav design.

--- a/src/Views/Client/styles/index.css
+++ b/src/Views/Client/styles/index.css
@@ -59,6 +59,7 @@
   @import "./components/card.css";
   @import "./components/headings.css";
   @import "./components/hr.css";
+  @import "./components/interactive-border.css";
   @import "./components/sub-heading.css";
   @import "./components/link.css";
   @import "./components/copy.css";
