--- a/src/Site/Components/Pages/StyleGuide/Index.razor
+++ b/src/Site/Components/Pages/StyleGuide/Index.razor
@@ -114,5 +114,5 @@
 <Site.Components.Pages.StyleGuide.CSSComponents.Overview Id="css-components" />
 
 <SectionContent SectionName="Footer">
-    <div>This is footer content.</div>
+    <MainFooter />
 </SectionContent>
