--- a/src/Views/Server/Features/PageHeader/HamburgerButton.razor
+++ b/src/Views/Server/Features/PageHeader/HamburgerButton.razor
@@ -3,6 +3,8 @@
 @namespace Views.Server.Features.PageHeader
 
 <button
+    type="button"
+    aria-label="Toggle navigation"
     data-feature="mobile-nav.toggle"
     class="
         fixed
