--- a/src/Views/Server/Layouts/BasicLayout.razor
+++ b/src/Views/Server/Layouts/BasicLayout.razor
@@ -27,7 +27,9 @@
     <main class="grow">
         @Body
     </main>
-    <PageFooter />
+    <PageFooter>
+        <SectionOutlet SectionName="Footer" />
+    </PageFooter>
 </div>
 
 <script src="/_content/Views/bundle/main.js"></script>
