site: Multiple small style tweaks.

--- a/src/Site/Components/Pages/StyleGuide/DocLink.razor
+++ b/src/Site/Components/Pages/StyleGuide/DocLink.razor
@@ -5,7 +5,7 @@
 
 <CardLink Href="@Href" Class="object">
     <div class="text-center">
-        @ChildContent&nbsp;<span><ArrowCircleRightIcon Class="w-5 h-5 my-[-0.1rem]" /></span>
+        @ChildContent&nbsp;<span><ArrowCircleRightIcon Class="w-5 h-5" /></span>
     </div>
 </CardLink>
 
