--- a/src/Views/Server/Components/CardLink/CardLink.razor
+++ b/src/Views/Server/Components/CardLink/CardLink.razor
@@ -1,6 +1,6 @@
 @namespace Views.Server.Components
 
-<a href="@Href" target="@Target" class="link card-link">
+<a href="@Href" target="@Target" class="link card-link hover:no-underline focus:no-underline">
     <div class="@GetCardClasses()">
         @ChildContent
     </div>
