--- a/src/Site/Components/Shared/MainFooter.razor
+++ b/src/Site/Components/Shared/MainFooter.razor
@@ -1,4 +1,5 @@
 @using Views.Server.Components
+@using Views.Server.Components.Icons
 
 @namespace Site.Components.Shared
 
@@ -14,7 +15,7 @@
     >
         <h3 class="heading heading-5 heading-top">Games</h3>
         <ul class="minimal">
-            <li>Untitled RPG</li>
+            <li><a href="#">Untitled RPG</a></li>
         </ul>
     </div>
     <div
@@ -29,9 +30,9 @@
     >
         <h3 class="heading heading-5 heading-top">Company</h3>
         <ul class="minimal">
-            <li>About</li>
-            <li>News</li>
-            <li>Blog</li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">News</a></li>
+            <li><a href="#">Blog</a></li>
         </ul>
     </div>
     <div
@@ -47,5 +48,11 @@
         "
     >
         <h3 class="heading heading-5 heading-top">Social</h3>
+        <ul class="minimal flex items-center gap-5 mt-2">
+            <li><a href="#"><XSocialIcon Class="w-5 h-5" /></a></li>
+            <li><a href="#"><YouTubeSocialIcon /></a></li>
+            <li><a href="#"><InstagramSocialIcon /></a></li>
+            <li><a href="#"><SteamSocialIcon /></a></li>
+        </ul>
     </div>
 </div>
