--- a/src/Views/Server/Features/PageHeader/NavigationLink.razor.css
+++ b/src/Views/Server/Features/PageHeader/NavigationLink.razor.css
@@ -20,9 +20,13 @@
 }
 .navigation-link:hover,
 .navigation-link:focus {
-  box-shadow: 0 0 0 calc(var(--spacing) * 0.25) var(--color-interactive-3);
+  /* box-shadow: 0 0 0 calc(var(--spacing) * 0.25) var(--color-interactive-3); */
+  text-decoration: underline;
+  text-underline-offset: calc(var(--spacing) * 2);
 }
 
 .navigation-link--active {
-  border-color: var(--interactive-3);
+  /* border-color: var(--interactive-3); */
+  text-decoration: underline;
+  text-underline-offset: calc(var(--spacing) * 2);
 }
