--- a/src/Site/Components/Pages/StyleGuide/Features/Overview.razor
+++ b/src/Site/Components/Pages/StyleGuide/Features/Overview.razor
@@ -1,4 +1,5 @@
 @using Views.Server.Features
+@using Site.Components.Pages.StyleGuide
 
 @namespace Site.Components.Pages.StyleGuide.Features
 
@@ -14,6 +15,9 @@
             <div class="card object">Page Header</div>
             <div class="card object">Page Footer</div>
             <div class="card object">Section Block</div>
+            <DocLink Href="/style-guide/features/banner-block">
+                Banner Block
+            </DocLink>
         </div>
     </ChildContent>
 </SectionBlock>
